Fixed overflow on capure page

--- a/src/pages/Summary/Summary.css
+++ b/src/pages/Summary/Summary.css
@@ -39,12 +39,14 @@
 
 	html,
 	body,
-	#root {
-		overflow-y: visible;
+	#root #summary {
+		overflow-y: visible !important;
 	}
 
 	#camera {
 		max-height: 100vh;
+		position: fixed;
+		inset: 0;
 		overflow-y: hidden;
 	}
 
